# Gym

3imp/: README.md  heap-based.rkt  stack-based.rkt
CodeWars/TinyThreePassCompiler/: TinyThreePassCompiler.cabal
CodeWars/TinyThreePassCompiler/src/: TinyThreePassCompiler.hs
RayTracing/: RayTracing.cabal
RayTracing/app/: Main.hs
RayTracing/src/: RayTracing.hs
cps/: cek.rkt
regex/: regex.cpp
type-infer/: CHANGELOG.md  type-infer.cabal
type-infer/app/: Main.hs  infer.hs  lang.hs
type-infer/src/: LangCore.hs  LangParser.hs  TypeInfer.hs
type-infer/test/: TestInfer.hs
