cabal-version:      3.4
name:               type-infer
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: MIT
author:             xc42
maintainer:         2042292281@qq.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs: src
    build-depends: base, containers, mtl, parsec

    exposed-modules: TypeInfer,LangCore,LangParser

executable type-infer
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: TypeInfer, LangCore

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, containers, mtl
    hs-source-dirs:   app, src
    default-language: Haskell2010

test-suite test-type-infer
    type: exitcode-stdio-1.0
    -- test-module: TestInfer
    main-is: TestInfer.hs
    hs-source-dirs: test, src
    build-depends: base, containers, HUnit, Cabal, parsec, mtl
    other-modules: TypeInfer, LangParser, LangCore
